@@ -20,6 +20,7 @@
 #' @param w width of 2-panel graph
 #' @param hc height of cumulative exclusion 1-panel graph
 #' @param wc width of this 1-panel graph
+#' @param adjustwidth used to allow wide detailed exclusion table to go into left margin in order to be centered on the physical page.  The default is \code{'-0.75'}, which works well when using article document class with default page width.  To use the geometry package in LaTeX with margin=.45in specify \code{adjustwidth='+.90in'}.
 #' @param append set to \code{TRUE} if adding to an existing sub-report
 #' @param popts a list of options to pass to graphing functions
 #' @param app set to \code{FALSE} to prevent writing appendix information
@@ -31,8 +32,8 @@
 exReport <- function(formula, data=NULL, subset=NULL, na.action=na.retain,
                      autoother=FALSE, sort=TRUE, whenapp=NULL, erdata=NULL,
                      panel='excl', subpanel=NULL, head=NULL, tail=NULL,
-                     h=5.5, w=6.5, hc=4.5, wc=5, append=FALSE, popts=NULL,
-                     app=TRUE) {
+                     h=5.5, w=6.5, hc=4.5, wc=5, adjustwidth='-0.75',
+                     append=FALSE, popts=NULL, app=TRUE) {
 
   file <- sprintf('%s/%s.tex', getgreportOption('texdir'), panel)
   if(!append) cat('', file=file)
@@ -301,7 +302,8 @@ exReport <- function(formula, data=NULL, subset=NULL, na.action=na.retain,
   
   ct('\\begin{table}[htbp]\\small\n',
      '\\caption[Exclusions]{Exclusions.  \\texttt{Incremental Exclusions} are those in addition to exclusions in earlier rows.  \\texttt{Marginal Exclusions} are numbers of subjects excluded for the indicated reason whether or not she was excluded for other reasons.  The three \\texttt{Fractions} are based on incremental exclusions.\\label{tab:exclstats', subp, '}}\n',
-     '\\begin{center}\\begin{adjustwidth}{-.75in}{-.75in}\n',
+     '\\begin{center}\\begin{adjustwidth}{', adjustwidth, '}{',
+     adjustwidth, '}\n',
      '\\begin{tabular}{lrrrrr}\\hline\\hline\n',
      '\\multicolumn{1}{c}{Exclusions}&\\multicolumn{1}{c}{Incremental}&\\multicolumn{1}{c}{Marginal}&\\multicolumn{1}{c}{Fraction of}&\\multicolumn{1}{c}{Fraction of}&\\multicolumn{1}{c}{Fraction}\\tabularnewline',
      '&\\multicolumn{1}{c}{Exclusions}&\\multicolumn{1}{c}{Exclusions}&\\multicolumn{1}{c}{Enrolled}&\\multicolumn{1}{c}{Exclusions}&\\multicolumn{1}{c}{Remaining}\\tabularnewline\\hline\n')
